--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: java
-
 jdk:
-    - oraclejdk8
-
-services:
-    - postgresql
-
-before_install:
+ - oraclejdk8
+deploy:
+ provider: heroku
+ api-key:
+  secure: $HEROKU_API_KEY
+ app: springboot-ci
